[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "escy"
version = "0.1.0"
description = "ESC/POS helper utilities"
authors = [{name="E3nvicriob"}]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pyserial"
]

[tool.setuptools.packages.find]
where = ["src"]
